API specification is generated on build, #1
