# model/api_response_error.go
@@ -1,5 +1,8 @@
 package model
 
+// ApiResponseError represents an error response from the API.
+//
+// swagger:model
 type ApiResponseError struct {
 	Message string `json:"message,omitempty"`
 }
